@@ -55,6 +55,8 @@ Please visit http://aegisub.net to download latest version
 - Added sorting functionality to Styles Manager, for both storage and current script. (AMZ)
 - Tweaked the layout of Subtitles Edit area. (AMZ)
 - Actor and Effect fields now show a "ghosted" caption saying their name when they are not focused on and blank. (AMZ)
+- Aegisub now remembers if it was maximized when it was last quit, and restores its state when opening again. (AMZ)
+- A few minor tweaks to the Find dialogue. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
